WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258890
Fix incorrect HAVE macro
https://bugs.webkit.org/show_bug.cgi?id=258890
Summary
Fix incorrect HAVE macro
Per Arne Vollan
Reported
2023-07-05 09:56:22 PDT
Fix incorrect HAVE macro.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-05 09:56:36 PDT
<
rdar://problem/111794042
>
Per Arne Vollan
Comment 2
2023-07-05 09:57:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15571
EWS
Comment 3
2023-07-05 14:12:08 PDT
Committed
265780@main
(5b715db35324): <
https://commits.webkit.org/265780@main
> Reviewed commits have been landed. Closing PR #15571 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug