Fix incorrect HAVE macro https://bugs.webkit.org/show_bug.cgi?id=258890 rdar://111794042

Reviewed by Brent Fulgham.

* Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::platformInitializeAccessibility):
* Source/WebCore/PAL/pal/spi/cocoa/LaunchServicesSPI.h:

Canonical link: https://commits.webkit.org/265780@main